<resources xmlns:tools="http://schemas.android.com/tools" translatable="false">
    <string name="icon_caozuorizhi1" translatable="false">&#xe67b;</string>
    <string name="icon_qidong1" translatable="false">&#xe659;</string>
    <string name="icon_chaoqiangshengdian1" translatable="false">&#xe67c;</string>
    <string name="icon_qian" translatable="false">&#xe662;</string>
    <string name="icon_beizhu1" translatable="false">&#xe64c;</string>
    <string name="icon_QQ1" translatable="false">&#xe661;</string>
    <string name="icon_weixin1" translatable="false">&#xe665;</string>
    <string name="icon_bi" translatable="false">&#xe65d;</string>
    <string name="icon_shipinjiaocheng1" translatable="false">&#xe659;</string>
    <string name="icon_banzidong1" translatable="false">&#xe683;</string>
    <string name="icon_qidong2" translatable="false">&#xe660;</string>
    <string name="icon_youjiantou11" translatable="false">&#xe644;</string>
    <string name="icon_zuojiantou11" translatable="false">&#xe652;</string>
    <string name="icon_fuzhu1" translatable="false">&#xe66e;</string>
    <string name="icon_daojishi" translatable="false">&#xe676;</string>
    <string name="icon_danchuang1" translatable="false">&#xe672;</string>
    <string name="icon_liebiao1" translatable="false">&#xe63d;</string>
    <string name="icon_yunshanfu1" translatable="false">&#xe648;</string>
    <string name="icon_cha1" translatable="false">&#xe681;</string>
    <string name="icon_gou" translatable="false">&#xe668;</string>
    <string name="icon_dianchi1" translatable="false">&#xe66d;</string>
    <string name="icon_shanchu1" translatable="false">&#xe65e;</string>
    <string name="icon_renminbi" translatable="false">&#xe65d;</string>
    <string name="icon_tianchong2" translatable="false">&#xe65a;</string>
    <string name="icon_jiaocheng" translatable="false">&#xe663;</string>
    <string name="icon_gengduo11" translatable="false">&#xe677;</string>
    <string name="icon_gengduo1" translatable="false">&#xe646;</string>
    <string name="icon_zidong" translatable="false">&#xe643;</string>
    <string name="icon_suoding" translatable="false">&#xe657;</string>
    <string name="icon_leixing" translatable="false">&#xe666;</string>
    <string name="icon_time" translatable="false">&#xe658;</string>
    <string name="icon_duizhangdan" translatable="false">&#xe67f;</string>
    <string name="icon_daoru" translatable="false">&#xe673;</string>
    <string name="icon_daochu" translatable="false">&#xe675;</string>
    <string name="icon_pifu" translatable="false">&#xe67a;</string>
    <string name="icon_fenlei" translatable="false">&#xe66c;</string>
    <string name="icon_tongzhi" translatable="false">&#xe651;</string>
    <string name="icon_icon_test" translatable="false">&#xe63c;</string>
    <string name="icon_weizhi" translatable="false">&#xe63e;</string>
    <string name="icon_duanxin" translatable="false">&#xe665;</string>
    <string name="icon_chenggong" translatable="false">&#xe678;</string>
    <string name="icon_yingshe" translatable="false">&#xe64a;</string>
    <string name="icon_APP" translatable="false">&#xe684;</string>
    <string name="icon_chaojizhangben" translatable="false">&#xe67f;</string>
    <string name="icon_xiazai" translatable="false">&#xe655;</string>
    <string name="icon_xuanfuchuang" translatable="false">&#xe672;</string>
    <string name="icon_shujuguanli" translatable="false">&#xe653;</string>
    <string name="icon_zuijinliulan" translatable="false">&#xe641;</string>
    <string name="icon_github" translatable="false">&#xe670;</string>
    <string name="icon_wode_guanyuwomen" translatable="false">&#xe656;</string>
    <string name="icon_setting" translatable="false">&#xe65c;</string>
    <string name="icon_huifu" translatable="false">&#xe667;</string>
    <string name="icon_sync" translatable="false">&#xe66a;</string>
    <string name="icon_dianji" translatable="false">&#xe671;</string>
    <string name="app_name" translatable="false">自动记账</string>
    <string name="app_title" translatable="false">自动记账 3.0</string>
    <string name="app_desc" translatable="false">涅槃重生 王者归来</string>
    <string name="app_help_go_setting" translatable="false">进入设置</string>
    <string name="app_help_skip" translatable="false">跳过设置</string>
    <string name="app_help_skip_last" translatable="false">上一步</string>
    <string name="app_help_1_app_names" translatable="false">记账软件</string>
    <string name="app_help_1_desc" translatable="false">自动记账支持多个记账软件，请选择您使用的软件。</string>
    <string name="app_help_next" translatable="false">下一步</string>
    <string name="helper_2_choose" translatable="false">已选择：%s</string>
    <string name="helper_2_tip" translatable="false">暂不支持，敬请期待。</string>
    <string name="app_help_2_work_mode" translatable="false">工作模式</string>
    <string name="app_help_2_desc" translatable="false">自动记账仅支持Xposed工作模式。</string>
    <string name="app_help_2_tip" translatable="false">请授予自动记账以下权限</string>
    <string name="app_help_3_async" translatable="false">数据同步</string>
    <string name="app_help_3_tip" translatable="false">是否现在同步%s数据？</string>
    <string name="app_help_3_tip2" translatable="false">数据已同步完成，是否需要重新同步？</string>
    <string name="app_help_3_button_async" translatable="false">重新同步</string>
    <string name="app_help_3_async_now" translatable="false">立即同步</string>
    <string name="githubUrl" translatable="false">https://github.com/dreamncn/Qianji_auto</string>
    <string name="learnUrl" translatable="false"><![CDATA[https://doc.ankio.net/doc/%E8%87%AA%E5%8A%A8%E8%AE%B0%E8%B4%A6%E4%BD%BF%E7%94%A8%E6%96%87%E6%A1%A3/#/]]></string>
    <string name="biliUrl" translatable="false" tools:ignore="Typos"><![CDATA[https://player.bilibili.com/player.html?aid=289448844&bvid=BV1Hf4y147Yi&cid=303785417&page=1]]></string>
    <string name="QQ_Group" translatable="false">165652170</string>
    <string name="files_default_empty_text" translatable="false">这里空空如也</string>
    <string name="permission_helper_tip" translatable="false">点击【已下载的应用】-【自动记账】打开无障碍服务。</string>
    <string name="permission_success" translatable="false">权限获取成功！</string>
    <string name="permission_never" translatable="false">被永久拒绝授权，请手动授予相关权限！</string>
    <string name="permission_fail" translatable="false">获取权限失败！</string>
    <string name="permission_lock_tip" translatable="false">请进入多任务界面，手动锁定自动记账。</string>
    <string name="permission_task" translatable="false">多任务状态：%s</string>
    <string name="permission_task_show" translatable="false">显示</string>
    <string name="permission_task_hide" translatable="false">隐藏</string>
    <string name="permission_storage_tip" translatable="false">请手动授予权限。</string>
    <string name="mode_select" translatable="false">请选择模式</string>
    <string name="mode_xp" translatable="false">Xposed模式</string>
    <string name="mode_helper" translatable="false">无障碍模式</string>
    <string name="qianji_async_desc" translatable="false">🧚‍♀️你可以一键将钱迹中的「资产」、「账本」、「分类」等数据同步到自动记账，期间手机会跳转到钱迹，完成同步后将自动跳回本页面。 \n\n❗❗❗️ 同步前，请将钱迹从多任务页面划掉，确保开启所有权限，并将钱迹加入Xposed模块作用域中。</string>
    <string name="qianji_async_no_support" translatable="false">钱迹只支持Xposed用户同步，无障碍用户需要手动配置。</string>
    <string name="help_5_title" translatable="false">使用习惯</string>
    <string name="help_5_desc" translatable="false">让自动记账更熟悉你。</string>
    <string name="lineLay_none" translatable="false"> </string>
    <string name="set_lazy_mode" translatable="false">懒人模式</string>
    <string name="set_open" translatable="false">开启</string>
    <string name="set_close" translatable="false">关闭</string>
    <string name="set_front" translatable="false">亮屏情况下记账模式</string>
    <string name="set_all" translatable="false">全自动记账</string>
    <string name="set_half" translatable="false">半自动记账</string>
    <string name="set_back" translatable="false">锁屏情况下记账模式</string>
    <string name="set_default" translatable="false">默认账本</string>
    <string name="set_remark" translatable="false">记账备注样式</string>
    <string name="set_remark_default" translatable="false">[商户名]-[商户信息]</string>
    <string name="set_sort" translatable="false">记住本次分类</string>
    <string name="set_float_time" translatable="false">悬浮窗倒计时</string>
    <string name="set_time" translatable="false">%s 秒</string>
    <string name="set_float_click" translatable="false">悬浮窗点击</string>
    <string name="set_click_book" translatable="false">直接记账</string>
    <string name="set_click_double" translatable="false">弹出编辑面板</string>
    <string name="set_click_close" translatable="false">关闭记账</string>
    <string name="set_float_long_click" translatable="false">悬浮窗长按</string>
    <string name="set_float_time_end" translatable="false">悬浮窗倒计时结束</string>
    <string name="set_notice_click" translatable="false">通知点击</string>
    <string name="set_float_style" translatable="false">弹窗样式</string>
    <string name="set_auto" translatable="false">自动记账</string>
    <string name="set_qianji" translatable="false">钱迹</string>
    <string name="set_choose_book" translatable="false">请选择账本</string>
    <string name="set_remark_tip" translatable="false">备注格式</string>
    <string name="set_cancle" translatable="false">取消</string>
    <string name="set_sure" translatable="false">确定</string>
    <string name="time_error" translatable="false">请输入大于0的整数！</string>
    <string name="help_6_into" translatable="false">进入自动记账</string>
    <string name="help_6_title" translatable="false">恭喜你</string>
    <string name="help_6_sub" translatable="false">完成所有设置</string>
    <string name="help_6_tip" translatable="false">你可以前往帮助文档进一步了解自动记账。本软件为开源项目，可前往 GitHub 查看源码。</string>
    <string name="main_base" translatable="false">基础设置</string>
    <string name="book_input" translatable="false">请输入账本名称</string>
    <string name="menu_setting" translatable="false">插件设置</string>
    <string name="menu_manager" translatable="false">资产管理</string>
    <string name="menu_map" translatable="false">资产映射</string>
    <string name="menu_sort" translatable="false">分类管理</string>
    <string name="menu_title_book" translatable="false">账单数据</string>
    <string name="menu_data_async" translatable="false">数据同步</string>
    <string name="menu_book_list" translatable="false">账单列表</string>
    <string name="menu_book_check" translatable="false">账单核对</string>
    <string name="menu_book_year" translatable="false">年度账单</string>
    <string name="menu_log" translatable="false">日志数据</string>
    <string name="menu_log_app" translatable="false">App数据</string>
    <string name="menu_log_sms" translatable="false">短信列表</string>
    <string name="menu_log_notice" translatable="false">通知列表</string>
    <string name="menu_log_list" translatable="false">日志列表</string>
    <string name="menu_regular" translatable="false">规则数据</string>
    <string name="menu_reg_sort" translatable="false">自动分类</string>
    <string name="menu_reg_app" translatable="false">App识别</string>
    <string name="menu_reg_sms" translatable="false">短信识别</string>
    <string name="menu_reg_notice" translatable="false">通知识别</string>
    <string name="menu_others" translatable="false">其他</string>
    <string name="menu_others_skin" translatable="false">皮肤</string>
    <string name="menu_others_backup" translatable="false">备份恢复</string>
    <string name="menu_others_teach" translatable="false">使用教程</string>
    <string name="menu_others_video" translatable="false">视频教程</string>
    <string name="menu_others_github" translatable="false">Github</string>
    <string name="menu_others_about" translatable="false">关于</string>
    <string name="set_app" translatable="false">记账App</string>
    <string name="set_normal" translatable="false">基本配置</string>
    <string name="set_mode" translatable="false">记账模式</string>
    <string name="set_book" translatable="false">记账功能</string>
    <string name="set_float" translatable="false">悬浮窗功能</string>
    <string name="set_need_cate">分类功能</string>
    <string name="set_need_cate_y">需要分类</string>
</resources>