<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_side"
            android:layout_weight="1"
            android:text="@string/set_normal"
            android:textSize="16sp" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:line_title="@string/set_app"
            app:line_value="@string/set_qianji">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_lazy_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_lazy_mode"
            app:line_value="@string/set_close">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_need_cate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_need_cate"
            app:line_value="@string/set_need_cate_y">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_side"
            android:layout_weight="1"
            android:text="@string/set_mode"
            android:textSize="16sp" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_front"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:line_title="@string/set_front"
            app:line_value="@string/set_half">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_back"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:line_title="@string/set_back"
            app:line_value="@string/set_half">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_side"
            android:layout_weight="1"
            android:text="@string/set_book"
            android:textSize="16sp" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_default"
            app:line_value="@string/set_default">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_remark"
            app:line_value="@string/set_remark_default" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_sort"
            app:line_value="@string/set_open">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_side"
            android:layout_weight="1"
            android:text="@string/set_float"
            android:textSize="16sp" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_float_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_float_time"
            app:line_value="@string/set_time">

        </cn.dreamn.qianji_auto.ui.components.LineLay>

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_float_click"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:line_title="@string/set_float_click"
            app:line_value="@string/set_click_double" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_float_long_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_float_long_click"
            app:line_value="@string/set_click_double" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_float_time_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_float_time_end"
            app:line_value="@string/set_time" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_notice_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_title="@string/set_notice_click"
            app:line_value="@string/set_time" />

        <cn.dreamn.qianji_auto.ui.components.LineLay
            android:id="@+id/set_float_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:line_margin_bottom="20"
            app:line_margin_left="10"
            app:line_margin_right="10"
            app:line_margin_top="20"
            app:line_title="@string/set_float_style"
            app:line_value="@string/set_qianji" />


    </LinearLayout>

</ScrollView>