<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <cn.dreamn.qianji_auto.ui.components.IconView
        android:id="@+id/iconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/icon_chenggong"
        android:textColor="@color/blue"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/help_6_title"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/help_6_tip"
        android:textColor="@color/skip_title"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/help_6_sub"
        android:textColor="@color/blue"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_go_setting"
        style="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="100dp"


        android:background="@drawable/btn_normal_1"
        android:lineSpacingExtra="10sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:stateListAnimator="@null"
        android:text="@string/help_6_into"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textColor="@color/background_white"
        android:textSize="16sp" />

    <include
        layout="@layout/fragment_helper_skip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>