<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:paddingBottom="13dp"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="0dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/help_skip_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="11dp"
        android:text="@string/app_help_skip_last"
        android:textColor="@color/gray" />

    <cn.dreamn.qianji_auto.ui.components.IconView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"

        android:layout_marginEnd="-8dp"
        android:gravity="center|center_horizontal"
        android:text="@string/icon_zuojiantou11"
        android:textColor="@color/gray"

        />

    <TextView
        android:id="@+id/help_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_help_skip"
        android:textColor="@color/gray" />

    <cn.dreamn.qianji_auto.ui.components.IconView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="13dp"

        android:layout_marginEnd="15dp"
        android:gravity="center|center_horizontal"
        android:text="@string/icon_youjiantou11"
        android:textColor="@color/gray"

        />


</RelativeLayout>