<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_help_3_async"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/app_help_3_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="false"
        android:text="" />

    <TextView
        android:id="@+id/app_help_3_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/iv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_help_3_tip"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/app_help_3_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button_next"
        style="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"


        android:layout_marginEnd="18dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_normal_1"
        android:lineSpacingExtra="10sp"
        android:stateListAnimator="@null"
        android:text="@string/app_help_next"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textColor="@color/background_white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_async"
        style="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_help_3_tip"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_normal_1"
        android:lineSpacingExtra="10sp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:stateListAnimator="@null"
        android:text="@string/app_help_3_async_now"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textColor="@color/background_white"
        android:textSize="16sp" />

    <include
        android:id="@+id/buttom_include"
        layout="@layout/fragment_helper_skip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>