<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_white">


    <com.github.xiaofeidev.round.RoundImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:rd_radius="50dp"
        app:rd_stroke_color="@android:color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/main_title"
        android:textSize="28dp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_desc"
        android:textColor="@color/skip_title" />

    <Button
        android:id="@+id/button_go_setting"
        style="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_normal"
        android:lineSpacingExtra="10sp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:stateListAnimator="@null"
        android:text="@string/app_help_go_setting"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textColor="@color/background_white"
        android:textSize="16sp" />

    <include
        layout="@layout/fragment_helper_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
         />

</RelativeLayout>