<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cn.dreamn.qianji_auto.ui.components.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundColor="@color/background_white"
        app:left_color="@color/black"
        app:left_icon="&#xe62e;"
        app:right_color="@color/black"
        app:title_color="@color/black"
        app:title_text="工作模式" />

    <ScrollView
        android:layout_below="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="false"
                android:text="@string/app_help_2_desc" />

            <LinearLayout
                android:id="@+id/mode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="8dp"
                android:background="@color/background_white"
                android:backgroundTint="@color/background_white"
                android:orientation="vertical">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/background_gray"
                    android:padding="10dp">

                    <cn.dreamn.qianji_auto.ui.components.IconView
                        android:id="@+id/rightIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:text="@string/icon_youjiantou11"
                        android:textColor="@color/skip_title" />

                    <TextView
                        android:id="@+id/mode_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@+id/rightIcon"
                        android:textColor="@color/skip_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/app_help_2_work_mode"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_help_2_tip" />

            <ListView
                android:id="@+id/lv_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fastScrollEnabled="true" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>